k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  # additional config options specifying higher level config around the ingress object that gets created
  annotations:
    # tells kubernetes we want to create a controller based on the nginx project 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # configures how the actual copy of nginx behaves. this rule in particular says if we end up matching a route like
    # '/api', after deciding to send it to the server, that config is going to do a lil re-write on the request, ie it 
    # will remove the '/api' part (so we dont have to write '/api' on every diff route on the server itself)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              # serviceName: client-cluster-ip-service
              # servicePort: 3000
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              # serviceName: server-cluster-ip-service
              # servicePort: 5000
              service: 
                name: server-cluster-ip-service
                port:
                  number: 5000
